5 - configuring-managing-kubernetes-security-2/03/demos/m3/demo1/allow-policies/app/allow-api-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-db
  namespace: wiredbrain
spec:
  # Apply to database pods
  podSelector:
    matchLabels:
      component: database
  policyTypes:
  - Ingress
  ingress:
  # Allow ingress from products-api pods on port 5432
  - from:
    - podSelector:
        matchLabels:
          component: products-api
    ports:
    - protocol: TCP
      port: 5432
  # Allow ingress from stock-api pods on port 5432
  - from:
    - podSelector:
        matchLabels:
          component: stock-api
    ports:
    - protocol: TCP
      port: 5432
